fixed issue with misaligned button in task details view
--HG--
branch : 0.6.9-development

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -2735,7 +2735,8 @@ div.hasHalfs{
 }
 
 
-/*=Meeting Single View*/
+/*=Meeting/Task Single View*/
+#TaskEditAndDetailsView,
 #MeetingEditAndDetailsView{
 	.details-table{
 		margin-right:0 !important;
